fixes alignment with profile picture

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@
     width: 35%;
     height: auto;
     justify-content: end;
-    margin: 3%;
+    margin: 20%;
     row-gap: 0.5em;
 }
 
